[gd_scene load_steps=12 format=3 uid="uid://4a25m1l2e8h1"]

[ext_resource type="Script" path="res://assets/src/objects/entities/player.gd" id="1_rih66"]
[ext_resource type="SpriteFrames" uid="uid://cv3ui17or26d0" path="res://assets/animations/monsters/player.tres" id="2_h1xb3"]
[ext_resource type="Shader" uid="uid://6jcd5ivo3p7s" path="res://assets/shaders/hit_flash.tres" id="2_ks7v5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xw84m"]
shader = ExtResource("2_ks7v5")
shader_parameter/enabled = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7xm4b"]
size = Vector2(9, 6)

[sub_resource type="CircleShape2D" id="CircleShape2D_sdtky"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m64bc"]
size = Vector2(9.3, 6.3)

[sub_resource type="Animation" id="Animation_k2md7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cam:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.2, 1.2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CM:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 0.882, 1)]
}

[sub_resource type="Animation" id="Animation_af2q2"]
resource_name = "hurt"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CM:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 2.5),
"transitions": PackedFloat32Array(0.233258, 5.09824, 1),
"update": 0,
"values": [Color(1, 1, 0.882353, 1), Color(1, 0.819608, 0.752941, 1), Color(1, 1, 0.882353, 1)]
}

[sub_resource type="Animation" id="Animation_s4cmh"]
resource_name = "impact_zoom"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cam:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(0.297302, 1.68179, 1),
"update": 0,
"values": [Vector2(1.2, 1.2), Vector2(1.224, 1.224), Vector2(1.2, 1.2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CM:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(0.258816, 3.13834, 1),
"update": 0,
"values": [Color(1, 1, 0.882353, 0.886275), Color(1.05098, 1.05098, 0.94902, 1), Color(1, 1, 0.882353, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_45tr8"]
_data = {
"RESET": SubResource("Animation_k2md7"),
"hurt": SubResource("Animation_af2q2"),
"impact_zoom": SubResource("Animation_s4cmh")
}

[node name="player" type="CharacterBody2D"]
y_sort_enabled = true
motion_mode = 1
slide_on_ceiling = false
script = ExtResource("1_rih66")

[node name="anim_sp" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_xw84m")
sprite_frames = ExtResource("2_h1xb3")
animation = &"attack_back"

[node name="coll" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_7xm4b")

[node name="cam" type="Camera2D" parent="."]
zoom = Vector2(1.2, 1.2)
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[node name="attack" type="Area2D" parent="."]

[node name="coll" type="CollisionShape2D" parent="attack"]
position = Vector2(0, 18)
rotation = 1.5708
shape = SubResource("CircleShape2D_sdtky")
disabled = true

[node name="player" type="Area2D" parent="."]
disable_mode = 2

[node name="coll" type="CollisionShape2D" parent="player"]
position = Vector2(0, 5.125)
shape = SubResource("RectangleShape2D_m64bc")

[node name="animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_45tr8")
}
speed_scale = 3.0

[node name="CM" type="CanvasModulate" parent="."]
color = Color(1, 1, 0.882, 1)

[connection signal="animation_finished" from="anim_sp" to="." method="_on_animation_finished"]
[connection signal="area_entered" from="player" to="." method="_on_body_area_entered"]
